- code clean up